[package]
name = "person_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
axum = "0.6.4"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }

[profile.release]
strip = true        # Automatically strip symbols from the binary
opt-level = "z"     # Optimize for size
lto = true          # Enable LTO
codegen-units = 1   # Use a stringle codegen for size optimization
panic = "abort"     # Remove traceback information